--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
    "name": "try-firebase",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@chakra-ui/react": "^1.7.4",
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
-        "firebase": "^9.6.3",
-        "framer-motion": "^5.6.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-firebase-hooks": "^4.0.2",
-        "react-icons": "^4.3.1",
-        "react-modal": "^3.14.4",
-        "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "react-spinners": "^0.11.0",
-        "uuid": "^8.3.2",
-        "web-vitals": "^2.1.3"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "gh-pages": "^3.2.3"
-    }
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@chakra-ui/react": "^1.7.4",
+      "@emotion/react": "^11.7.1",
+      "@emotion/styled": "^11.6.0",
+      "@testing-library/jest-dom": "^5.16.1",
+      "@testing-library/react": "^12.1.2",
+      "@testing-library/user-event": "^13.5.0",
+      "compressorjs": "^1.1.1",
+      "firebase": "^9.6.3",
+      "framer-motion": "^5.6.0",
+      "react": "^17.0.2",
+      "react-dom": "^17.0.2",
+      "react-firebase-hooks": "^4.0.2",
+      "react-icons": "^4.3.1",
+      "react-modal": "^3.14.4",
+      "react-router-dom": "^6.2.1",
+      "react-scripts": "5.0.0",
+      "react-spinners": "^0.11.0",
+      "uuid": "^8.3.2",
+      "web-vitals": "^2.1.3"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "gh-pages": "^3.2.3"
+   }
 }
